welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:3: error: identifier expected but '=' found.
  var x: = 0
         ^